--- a/rGallery/app/views/images/new.html.erb
+++ b/rGallery/app/views/images/new.html.erb
@@ -1,2 +1,31 @@
-<h1>Images#new</h1>
-<p>Find me in app/views/images/new.html.erb</p>
+<h2>Add New Image</h2>
+
+<%= form_for @image, html: {multipart:true} do |f| %>
+  <!-- Check for errors -->
+  <% if @image.errors.any? %>
+    <% @image.errors.full_messages.each do |msg| %>
+      <!-- Show errors -->
+      <div class="alert alert-danger"><%= msg %></div>
+    <% end %>
+  <% end %>
+
+  <div class="form-group">
+    <%= f.label :image_title %>
+    <%= f.text_field :image_title, class:"form-control" %>
+  </div>
+  <div class="form-group">
+    <%= f.label :category %>
+    <%= f.select :category_id, Category.all.collect {|x| [x.id,x.name]}, {include_blank: "Select Category"}, class:"form-control" %>
+  </div>
+  <div class="form-group">
+    <%= f.label :image_description %>
+    <%= f.text_area :image_description, class:"form-control" %>
+  </div>
+  <div class="form-group">
+    <%= f.label :image %>
+    <%= f.file_field :image %>
+  </div><br>
+
+  <%= f.submit "Submit", class:"btn btn-primary" %>
+  <%= link_to "Cancel", images_path, class:"btn btn-primary" %>
+<% end %>
