--- a/rGallery/app/views/layouts/application.html.erb
+++ b/rGallery/app/views/layouts/application.html.erb
@@ -9,6 +9,46 @@
   </head>
 
   <body>
-    <%= yield %>
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+      <a class="navbar-brand" href="#">rGallery</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <%= link_to "Home",root_path %>
+          </li>
+          <% @categoryNav.each do |category| %>
+            <li class="nav-item">
+              <%= link_to category.name,category_path(category.id),class:"nav-link" %>
+            </li>
+          <% end %>
+        </ul>
+        <ul class="navbar-nav float-rigth">
+          <li class="nav-item">
+            <%= link_to "Upload Photo", upload_path, class:"nav-link" %>
+          </li>
+          <li class="nav-item">
+            <%= link_to "Add Category", new_category_path, class:"nav-link" %>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <section>
+      <div class="container">
+        <% if flash[:notice] %>
+          <div class="alert alert-success"><%= flash[:notice] %></div>
+        <% end %>
+        <% if flash[:alert] %>
+          <div class="alert alert-danger"><%= flash[:alert] %></div>
+        <% end %>
+        <%= yield %>
+      </div>
+    </section>
+    <footer>
+      <p>Copyright @copy; 2014, rGallery</p>
+    </footer>
   </body>
 </html>
