--- a/rGallery/app/views/images/new.html.erb
+++ b/rGallery/app/views/images/new.html.erb
@@ -15,7 +15,7 @@
   </div>
   <div class="form-group">
     <%= f.label :category %>
-    <%= f.select :category_id, Category.all.collect {|x| [x.id,x.name]}, {include_blank: "Select Category"}, class:"form-control" %>
+    <%= f.select :category_id, Category.all.collect {|x| [x.name,x.id]}, {include_blank: "Select Category"}, class:"form-control" %>
   </div>
   <div class="form-group">
     <%= f.label :image_description %>
