--- a/rGallery/app/views/categories/show.html.erb
+++ b/rGallery/app/views/categories/show.html.erb
@@ -1,5 +1,5 @@
 <div id="gallery">
-  <h2><%= @category.name %></h2>
+  <h2><%= @category.name %><small class="float-right"><%= link_to "Edit", edit_category_path(@category) %></small></h2>
   <% if @images.exists? %>
     <% @images.each_slice(4) do |image| %>
       <div class="row">
